Change jsonrpc server from tcp to ws

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 [dependencies]
 sysfs_gpio = "0.5.3"
 jsonrpc-core = "11.0.0"
-jsonrpc-tcp-server = "11.0.0"
+jsonrpc-ws-server = "11.0.0"
 jsonrpc-pubsub = "11.0.0"
 crossbeam-channel = "0.3"
