--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ authors = ["Andrew Reid <gnomad@cryptolab.net>"]
 edition = "2018"
 
 [dependencies]
-sysfs_gpio = "0.5.3"
+gpio-cdev = "0.1"
 jsonrpc-core = "11.0.0"
 jsonrpc-ws-server = "11.0.0"
 jsonrpc-pubsub = "11.0.0"
 crossbeam-channel = "0.3"
-sloggers = "0.3.2"
