--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ gpio-cdev = "0.1"
 jsonrpc-core = "11.0.0"
 jsonrpc-ws-server = "11.0.0"
 jsonrpc-pubsub = "11.0.0"
+jsonrpc-test = "11.0.0"
 crossbeam-channel = "0.3"
 log = "0.4.0"
 env_logger = "0.6.1"
