--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ jsonrpc-ws-server = "11.0.0"
 jsonrpc-pubsub = "11.0.0"
 jsonrpc-test = "11.0.0"
 crossbeam-channel = "0.3"
+crossbeam-utils = "0.6"
 log = "0.4.0"
 env_logger = "0.6.1"
