--- a/debian/peach-buttons.service
+++ b/debian/peach-buttons.service
@@ -2,7 +2,11 @@
 Description=peach-buttons: A GPIO microservice module for handling button presses. Implements a JSON-RPC server with Publish-Subscribe extension.
 
 [Service]
+Type=simple
+User=root
+Group=root
 ExecStart=/usr/bin/peach-buttons
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
