Minor description changes

--- a/debian/peach-buttons.service
+++ b/debian/peach-buttons.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=peach-buttons: A GPIO microservice module for handling button presses. Implements a JSON-RPC server with Publish-Subscribe extension
+Description=GPIO microservice for handling button presses. Implements a JSON-RPC server with Publish-Subscribe extension.
 
 [Service]
 Type=simple
