--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "peach-buttons"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Andrew Reid <gnomad@cryptolab.net>"]
 edition = "2018"
 description = "peach-buttons is a GPIO microservice for handling button presses, implementing a JSON-RPC server with Publish-Subscribe extension. Each button press results in a JSON-RPC request being sent over websockets to any subscribers. A button code for the pressed button is sent with the request to subscribers, allowing state-specific actions to be taken."
@@ -18,9 +18,9 @@ implementing a JSON-RPC server with Publish-Subscribe extention. \
 Each button press results in a JSON-RPC request being sent over websockets \
 to any subscribers."""
 maintainer-scripts="debian"
+systemd-units = { unit-name = "peach-buttons" }
 assets = [
     ["target/release/peach-buttons", "usr/bin/", "755"],
-    ["debian/peach-buttons.service", "/lib/systemd/system/peach-buttons.service", "644"],
     ["README.md", "usr/share/doc/peach-buttons/README", "644"],
 ]
 
